--- a/test/index.html
+++ b/test/index.html
@@ -3,10 +3,112 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test First Site</title>
+    <title>GitHub Pages Test</title>
+    
+    <style>
+        body{
+            background-color: #1ABC9C;
+            color: white;
+            text-align: center;
+        }
+
+        div{
+            list-style-type: none;
+            border-radius: 10px;
+            display: flex;
+            flex-direction: column;
+            width: fit-content;
+            margin: auto;
+            margin-top: 45px;
+            background-color: #84f0da;
+            box-shadow: 10px 10px 10px black;
+            color: black;
+            padding: 5px 0px;
+        }
+
+        a{
+            text-decoration: none;
+            color: orange;
+            background-color: black;
+            border-radius: 5px;
+            padding: 1px 5px;
+        }
+
+        a:hover{
+            color: lightblue;
+        }
+
+        div p{
+            display: inline;
+            margin: 10px;
+        }
+
+        div:hover{
+            background-color: #84f0aa;
+        }
+
+        h1{
+            text-shadow: 1px 1px 10px red;
+        }
+
+        footer{
+            position: fixed;
+            bottom: 1px;
+            width: 99%;
+            margin: 0px;
+
+            animation-name: float; 
+            animation-duration: 3s; 
+            animation-iteration-count: infinite; 
+            animation-timing-function: ease-in-out;
+        }
+  
+        @keyframes float{ 
+            0% {
+                transform: translate(0,  0px);
+            } 
+            50% {
+                transform: translate(0, 15px);
+            } 
+            100% {
+                transform: translate(0, -0px);
+            }     
+        } 
+
+        footer p{
+            background-color: black;
+            padding: 10px;
+            margin: 20px 0px;
+        }
+
+    </style>
+
 </head>
 <body>
-    <h1>Lorem Power</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste quidem iure, dignissimos adipisci eum blanditiis accusantium. Facilis quam, eveniet aut quia ipsam, deserunt at harum qui consequuntur animi vel sit quaerat accusamus aperiam tempore omnis amet repellendus ut nisi tenetur. Quibusdam ipsum maiores cumque numquam corrupti nobis voluptatem laborum sit quae facere aut inventore dolore ipsam, debitis laudantium illum quisquam consectetur maxime eaque ad nihil totam vel consequuntur sed! Eveniet voluptas dolorum nemo. Ex voluptates, magnam adipisci nobis maxime id totam similique ratione reiciendis dolores, officiis repellat provident commodi minus sed atque in! Velit laboriosam odit minima esse obcaecati quas?</p>
+    <h1>Sanjay R. Prajapati</h1>
+
+    <div>
+        <p>
+            Student at <a href="http://iiitvadodara.ac.in/">Indian Institute of Information Technology Vadodara.</a> 
+        </p>
+        <p>
+            Third Year B.Tech in CSE.
+        </p>
+        <p>
+            Codechef.com : <a href="https://www.codechef.com/users/sanjay270899" target="_blank">sanjay270899</a>
+        </p>
+        <p>
+            Linkedin : <a href="https://www.linkedin.com/in/sanjay-prajapati-62b0871b4/" target="_blank">Sanjay Prajapati</a>
+        </p>
+        <p>
+            GitHub : <a href="https://github.com/sanjay270899" target="_blank"> sanjay270899</a>
+        </p>
+    </div>
+
+    <footer>
+        <p>
+            Just a test index.html file for GitHub Pages. (Not a resume)
+        </p>
+    </footer>
 </body>
 </html>
