Added Meta Tags

--- a/ipl/index.html
+++ b/ipl/index.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="IPL 2020 Schedule and Points Table">
+    <meta name="keywords" content="IPL, cricket, IPL 2020, T20">
+    <meta name="author" content="Sanjay R. Prajapati">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IPL 2020</title>
 
@@ -363,8 +366,7 @@
     </div>
 
     <footer class="text-center">
-        <p>Designed & Developed By <a id="sanjay" target="_blank"
-            href="https://www.linkedin.com/in/sanjay-prajapati-62b0871b4/">Sanjay R. Prajapati.</a></p>
+        <p>Designed & Developed By <a id="sanjay" target="_blank" href="https://www.linkedin.com/in/sanjay-prajapati-62b0871b4/">Sanjay R. Prajapati.</a></p>
     </footer>
 
 </body>
