Day 1 result updated

--- a/ipl/index.html
+++ b/ipl/index.html
@@ -27,7 +27,7 @@
             </tr>
             <tr>
                 <td>September 19, Saturday</td>
-                <td>Mumbai Indians vs Chennai Super Kings</td>
+                <td><span class="loss">Mumbai Indians</span> vs <span class="win">Chennai Super Kings</span></td>
                 <td>7:30 PM</td>
                 <td>Abu Dhabi</td>
             </tr>
