Minor Responsiveness changed and Day 4 result updated

--- a/ipl/index.html
+++ b/ipl/index.html
@@ -31,21 +31,27 @@
                     <th>PTS</th>
                 </tr>
                 <tr>
+                    <td>RR</td>
+                    <td>1</td>
+                    <td>+0.800</td>
+                    <td>2</td>
+                </tr>
+                <tr>
                     <td>RCB</td>
                     <td>1</td>
                     <td>+0.500</td>
                     <td>2</td>
                 </tr>
                 <tr>
-                    <td>CSK</td>
-                    <td>1</td>
-                    <td>+0.486</td>
-                    <td>2</td>
-                </tr>
-                <tr>
                     <td>DC</td>
                     <td>1</td>
                     <td>+0.000</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>CSK</td>
+                    <td>2</td>
+                    <td>-0.145</td>
                     <td>2</td>
                 </tr>
                 <tr>
@@ -56,12 +62,6 @@
                 </tr>
                 <tr>
                     <td>KKR</td>
-                    <td>0</td>
-                    <td>+0.000</td>
-                    <td>0</td>
-                </tr>
-                <tr>
-                    <td>RR</td>
                     <td>0</td>
                     <td>+0.000</td>
                     <td>0</td>
@@ -112,7 +112,7 @@
                 </tr>
                 <tr>
                     <td>September 22, Tuesday</td>
-                    <td>Rajasthan Royals vs Chennai Super Kings</td>
+                    <td><span class="win">Rajasthan Royals</span> vs <span class="loss">Chennai Super Kings</span></td>
                     <td>7:30 PM</td>
                     <td>Sharjah</td>
                 </tr>
@@ -438,9 +438,9 @@
                     <th colspan="3">Today's Match</th>
                 </tr>
                 <tr>
-                    <td>RR</td>
+                    <td>KKR</td>
                     <td>vs</td>
-                    <td>CSK</td>
+                    <td>MI</td>
                 </tr>
             </table>
 
@@ -449,9 +449,9 @@
                     <th colspan="3">Yesterday's Match Result</th>
                 </tr>
                 <tr>
-                    <td><span class="loss">SRH</span></td>
+                    <td><span class="win">RR</span></td>
                     <td>vs</td>
-                    <td><span class="win">RCB</span></td>
+                    <td><span class="loss">CSK</span></td>
                 </tr>
             </table>
         </div>
@@ -459,8 +459,7 @@
     </div>
 
     <footer class="text-center">
-        <p>Designed & Developed By <a id="sanjay" target="_blank"
-                href="https://www.linkedin.com/in/sanjay-prajapati-62b0871b4/">Sanjay R. Prajapati.</a></p>
+        <p>Designed & Developed By <a id="sanjay" target="_blank" href="https://www.linkedin.com/in/sanjay-prajapati-62b0871b4/">Sanjay R. Prajapati.</a></p>
     </footer>
 
 </body>
