Hover Scale Decreased & Result Updated

--- a/ipl/index.html
+++ b/ipl/index.html
@@ -31,51 +31,51 @@
                     <th>PTS</th>
                 </tr>
                 <tr>
-                    <td>MI</td>
+                    <td>DC</td>
                     <td>2</td>
-                    <td>+0.993</td>
-                    <td>2</td>
+                    <td>+1.100</td>
+                    <td>4</td>
                 </tr>
                 <tr>
                     <td>RR</td>
-                    <td>1</td>
-                    <td>+0.800</td>
                     <td>2</td>
+                    <td>+0.615</td>
+                    <td>4</td>
                 </tr>
                 <tr>
                     <td>RCB</td>
-                    <td>1</td>
-                    <td>+0.500</td>
-                    <td>2</td>
-                </tr>
-                <tr>
-                    <td>DC</td>
-                    <td>1</td>
-                    <td>+0.000</td>
-                    <td>2</td>
-                </tr>
-                <tr>
-                    <td>CSK</td>
-                    <td>2</td>
-                    <td>-0.145</td>
-                    <td>2</td>
+                    <td>3</td>
+                    <td>-1.450</td>
+                    <td>4</td>
                 </tr>
                 <tr>
                     <td>KXIP</td>
-                    <td>1</td>
-                    <td>+0.000</td>
-                    <td>0</td>
+                    <td>3</td>
+                    <td>+1.498</td>
+                    <td>2</td>
                 </tr>
                 <tr>
-                    <td>SRH</td>
-                    <td>1</td>
-                    <td>-0.500</td>
-                    <td>0</td>
+                    <td>MI</td>
+                    <td>3</td>
+                    <td>+0.654</td>
+                    <td>2</td>
                 </tr>
                 <tr>
                     <td>KKR</td>
+                    <td>2</td>
+                    <td>-0.767</td>
                     <td>1</td>
-                    <td>-2.450  </td>
+                </tr>
+                <tr>
+                    <td>CSK</td>
+                    <td>3</td>
+                    <td>-0.840</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>SRH</td>
+                    <td>2</td>
+                    <td>-0.730</td>
                     <td>0</td>
                 </tr>
             </table>
@@ -124,31 +124,31 @@
                 </tr>
                 <tr>
                     <td>September 24, Thursday</td>
-                    <td>Kings XI Punjab vs Royal Challengers Bangalore</td>
+                    <td><span class="win">Kings XI Punjab</span> vs <span class="loss">Royal Challengers Bangalore</td>
                     <td>7:30 PM</td>
                     <td>Dubai</td>
                 </tr>
                 <tr>
                     <td>September 25, Friday</td>
-                    <td>Chennai Super Kings vs Delhi Capitals</td>
+                    <td><span class="loss">Chennai Super Kings</span> vs <span class="win">Delhi Capitals</span></td>
                     <td>7:30 PM</td>
                     <td>Dubai</td>
                 </tr>
                 <tr>
                     <td>September 26, Saturday</td>
-                    <td>Kolkata Knight Riders vs Sunrisers Hyderabad</td>
+                    <td><span class="win">Kolkata Knight Riders</span> vs <span class="loss">Sunrisers Hyderabad</td>
                     <td>7:30 PM</td>
                     <td>Abu Dhabi</td>
                 </tr>
                 <tr>
                     <td>September 27, Sunday</td>
-                    <td>Rajasthan Royals vs Kings XI Punjab</td>
+                    <td><span class="win">Rajasthan Royals</span> vs <span class="loss">Kings XI Punjab</td>
                     <td>7:30 PM</td>
                     <td>Sharjah</td>
                 </tr>
                 <tr>
                     <td>September 28, Monday</td>
-                    <td>Royal Challengers Bangalore vs Mumbai Indians</td>
+                    <td><span class="win">Royal Challengers Bangalore</span> vs <span class="loss">Mumbai Indians</td>
                     <td>7:30 PM</td>
                     <td>Dubai</td>
                 </tr>
@@ -438,9 +438,9 @@
                     <th colspan="3">Today's Match</th>
                 </tr>
                 <tr>
-                    <td>KXIP</td>
+                    <td>DC</td>
                     <td>vs</td>
-                    <td>RCB</td>
+                    <td>SRH</td>
                 </tr>
             </table>
 
@@ -449,9 +449,9 @@
                     <th colspan="3">Yesterday's Match Result</th>
                 </tr>
                 <tr>
-                    <td><span class="loss">KKR</span></td>
+                    <td><span class="win">RCB</span></td>
                     <td>vs</td>
-                    <td><span class="win">MI</span></td>
+                    <td><span class="loss">MI</span></td>
                 </tr>
             </table>
         </div>
