--- a/ipl/index.html
+++ b/ipl/index.html
@@ -31,15 +31,15 @@
                     <th>PTS</th>
                 </tr>
                 <tr>
-                    <td>DC</td>
-                    <td>2</td>
-                    <td>+1.100</td>
-                    <td>4</td>
-                </tr>
-                <tr>
                     <td>RR</td>
                     <td>2</td>
                     <td>+0.615</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <td>DC</td>
+                    <td>3</td>
+                    <td>+0.483</td>
                     <td>4</td>
                 </tr>
                 <tr>
@@ -61,22 +61,22 @@
                     <td>2</td>
                 </tr>
                 <tr>
+                    <td>SRH</td>
+                    <td>3</td>
+                    <td>-0.228</td>
+                    <td>2</td>
+                </tr>
+                <tr>
                     <td>KKR</td>
                     <td>2</td>
                     <td>-0.767</td>
-                    <td>1</td>
+                    <td>2</td>
                 </tr>
                 <tr>
                     <td>CSK</td>
                     <td>3</td>
                     <td>-0.840</td>
                     <td>2</td>
-                </tr>
-                <tr>
-                    <td>SRH</td>
-                    <td>2</td>
-                    <td>-0.730</td>
-                    <td>0</td>
                 </tr>
             </table>
 
@@ -154,7 +154,7 @@
                 </tr>
                 <tr>
                     <td>September 29, Tuesday</td>
-                    <td>Delhi Capitals vs Sunrisers Hyderabad</td>
+                    <td><span class="loss">Delhi Capitals</span> vs <span class="win">Sunrisers Hyderabad</span></td>
                     <td>7:30 PM</td>
                     <td>Abu Dhabi</td>
                 </tr>
@@ -438,9 +438,9 @@
                     <th colspan="3">Today's Match</th>
                 </tr>
                 <tr>
-                    <td>DC</td>
+                    <td>RR</td>
                     <td>vs</td>
-                    <td>SRH</td>
+                    <td>KKR</td>
                 </tr>
             </table>
 
@@ -449,9 +449,9 @@
                     <th colspan="3">Yesterday's Match Result</th>
                 </tr>
                 <tr>
-                    <td><span class="win">RCB</span></td>
+                    <td><span class="loss">DC</span></td>
                     <td>vs</td>
-                    <td><span class="loss">MI</span></td>
+                    <td><span class="win">SRH</span></td>
                 </tr>
             </table>
         </div>
